#extand clients module. Add keycloak config. Add front-ui-service. Add tests

--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -10,6 +10,7 @@ COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY notification-service/pom.xml notification-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
 COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
+COPY front-ui-service/pom.xml front-ui-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 # Copy dependencies (to cache them) without src
