--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,23 @@ services:
       timeout: 5s
       retries: 5
 
+  keycloak:
+    container_name: keycloak-bank
+    image: quay.io/keycloak/keycloak:26.1.3
+    command: [ "start-dev", "--import-realm" ]
+    ports:
+      - "8090:8080"
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+    volumes:
+      - ./keycloak/config:/opt/keycloak/data/import  # Монтируем папку с realm-файлом
+    networks:
+      - postgres
+    restart: unless-stopped
+    depends_on:
+      - customer-db
+
   fraud-db:
     container_name: fraud-db
     image: postgres:15
@@ -83,23 +100,6 @@ services:
       timeout: 5s
       retries: 5
 
-#  keycloak:
-#    container_name: keycloak-bank
-#    image: quay.io/keycloak/keycloak:26.1.3
-#    command: ["start-dev", "--import-realm"]
-#    ports:
-#      - "8090:8080"
-#    environment:
-#      KC_BOOTSTRAP_ADMIN_USERNAME: admin
-#      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
-#    volumes:
-#      - ./keycloak/config:/opt/keycloak/data/import
-#    networks:
-#      - postgres
-#    restart: unless-stopped
-#    depends_on:
-#      - customer-db
-
 networks:
   postgres:
     driver: bridge
@@ -110,3 +110,4 @@ volumes:
   postgres_customer:
   postgres_fraud:
   postgres_notification:
+  postgres_exchange:
