--- a/exchange-generator-service/Dockerfile
+++ b/exchange-generator-service/Dockerfile
@@ -8,6 +8,7 @@ COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
+COPY front-ui-service/pom.xml front-ui-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl exchange-generator-service -am dependency:go-offline
