--- a/exchange-service/Dockerfile
+++ b/exchange-service/Dockerfile
@@ -8,6 +8,7 @@ COPY order-service/pom.xml order-service/pom.xml
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY notification-service/pom.xml notification-service/pom.xml
+COPY front-ui-service/pom.xml front-ui-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl exchange-service -am dependency:go-offline
