--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -8,6 +8,7 @@ COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY notification-service/pom.xml notification-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
 COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
+COPY front-ui-service/pom.xml front-ui-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl order-service -am dependency:go-offline
