--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>notification-service</module>
         <module>exchange-service</module>
         <module>exchange-generator-service</module>
+        <module>front-ui-service</module>
         <module>clients</module>
     </modules>
 
