--- a/my-microservices-app/Chart.yaml
+++ b/my-microservices-app/Chart.yaml
@@ -31,6 +31,11 @@ dependencies:
     version: "0.1.0"
     repository: "file://./charts/exchange-generator-service"  # Local path reference
 
+  # Subchart for FrontUI Service
+  - name: front-ui-service
+    version: "0.1.0"
+    repository: "file://./charts/front-ui-service"  # Local path reference
+
   # Subchart for Order Service
   - name: order-service
     version: "0.1.0"
