#try to deploy keycloak to prod

--- a/my-microservices-app/Chart.yaml
+++ b/my-microservices-app/Chart.yaml
@@ -36,6 +36,11 @@ dependencies:
     version: "0.1.0"
     repository: "file://./charts/front-ui-service"  # Local path reference
 
+  # Subchart for Keycloak
+  - name: keycloak
+    version: "0.1.0"
+    repository: "file://./charts/keycloak"  # Local path reference
+
   # Subchart for Order Service
   - name: order-service
     version: "0.1.0"
