--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -322,6 +322,15 @@ pipeline {
                   --set ingress.hosts[0].host=front-ui.prod.local \\
                   --set ingress.hosts[0].paths[0].path="/" \\
                   --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+                helm upgrade --install keycloak my-microservices-app/charts/keycloak \\
+                  --namespace prod --create-namespace \\
+                  --set configMap.enabled=true \\
+                  --set image.tag="26.1.3" \\
+                  --set ingress.enabled=true \\
+                  --set ingress.hosts[0].host=keycloak.prod.local \\
+                  --set ingress.hosts[0].paths[0].path="/" \\
+                  --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
                 """
             }
         }
