--- a/my-microservices-app/values.yaml
+++ b/my-microservices-app/values.yaml
@@ -139,6 +139,27 @@ front-ui-service:
           - path: /
             pathType: ImplementationSpecific
 
+keycloak:
+  replicaCount: 1
+  image:
+    repository: quay.io/keycloak/keycloak
+    tag: "26.1.3"
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 8090
+  ingress:
+    enabled: true
+    className: "nginx"
+    hosts:
+      - host: keycloak.myapp.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+  env:
+    adminUser: admin
+    adminPassword: admin
+
 # Configuration for the order-service subchart
 # NOTE: Build image locally: `docker build -t order-service:latest in order-service dir
 order-service:
