--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -318,6 +318,8 @@ pipeline {
                   --namespace prod --create-namespace \\
                   --set image.repository=front-ui-service \\
                   --set image.tag=${IMAGE_TAG} \\
+                  --set env.KEYCLOAK_ISSUER_URL=http://keycloak.prod.local:8090/realms/bank-realm \\
+                  --set env.KEYCLOAK_SERVER_URL=http://keycloak.prod.local:8090 \\
                   --set ingress.enabled=true \\
                   --set ingress.hosts[0].host=front-ui.prod.local \\
                   --set ingress.hosts[0].paths[0].path="/" \\
