#make of NodePort for keycloak. to expose Keycloak on port 8090

--- a/my-microservices-app/charts/keycloak/values.yaml
+++ b/my-microservices-app/charts/keycloak/values.yaml
@@ -37,8 +37,8 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
-  port: 8090 # Default port, overridden by umbrella
+  type: NodePort
+  port: 8080 # Default port, overridden by umbrella
 
 ingress:
   enabled: true
