--- a/my-microservices-app/charts/keycloak/templates/service.yaml
+++ b/my-microservices-app/charts/keycloak/templates/service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: 8090  # external port
+    - port: {{ .Values.service.port }}
       targetPort: http # Match the container port *name* in the deployment
       protocol: TCP
       name: http
