--- a/my-microservices-app/charts/keycloak/values.yaml
+++ b/my-microservices-app/charts/keycloak/values.yaml
@@ -37,7 +37,7 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 8080 # Default port, overridden by umbrella
 
 ingress:
