Add issuer_uri and server_url for front-ui-service via configmap.yaml

--- a/my-microservices-app/charts/front-ui-service/templates/configmap.yaml
+++ b/my-microservices-app/charts/front-ui-service/templates/configmap.yaml
@@ -9,3 +9,6 @@ data:
   {{- range $key, $value := .Values.config }}
   {{ $key }}: {{ $value | quote }}
   {{- end }}
+
+  KEYCLOAK_ISSUER_URL: {{ .Values.config.keycloak_issuer_url | quote }}
+  KEYCLOAK_SERVER_URL: {{ .Values.config.keycloak_server_url | quote }}
