--- a/my-microservices-app/charts/front-ui-service/values.yaml
+++ b/my-microservices-app/charts/front-ui-service/values.yaml
@@ -75,3 +75,7 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+config:
+  keycloak_issuer_url: "http://keycloak.prod.local:8080/realms/bank-realm"
+  keycloak_server_url: "http://keycloak.prod.local:8080"
