#fix docker build step

--- a/exchange-generator-service/Dockerfile
+++ b/exchange-generator-service/Dockerfile
@@ -9,6 +9,7 @@ COPY customer-service/pom.xml customer-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
 COPY front-ui-service/pom.xml front-ui-service/pom.xml
+COPY apigw/pom.xml apigw/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl exchange-generator-service -am dependency:go-offline
