--- a/front-ui-service/Dockerfile
+++ b/front-ui-service/Dockerfile
@@ -9,6 +9,7 @@ COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
+COPY apigw/pom.xml apigw/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl front-ui-service -am dependency:go-offline
