--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -9,6 +9,7 @@ COPY order-service/pom.xml order-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
 COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
 COPY front-ui-service/pom.xml front-ui-service/pom.xml
+COPY apigw/pom.xml apigw/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
 RUN mvn -B -pl notification-service -am dependency:go-offline
