--- a/my-microservices-app/charts/customer-service/values.yaml
+++ b/my-microservices-app/charts/customer-service/values.yaml
@@ -81,4 +81,5 @@ affinity: {}
 config:
   database_url: "jdbc:postgresql://postgres-postgresql.{{ .Release.Namespace }}.svc.cluster.local:5432/mydb"
   database_username: "myuser"
-  keycloak_issuer_url: "http://keycloak.prod.local:8080/realms/bank-realm"
+  keycloak_issuer_url: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080/realms/bank-realm"
+  ddl_auto_mode: "update"
