--- a/my-microservices-app/values.yaml
+++ b/my-microservices-app/values.yaml
@@ -139,8 +139,8 @@ front-ui-service:
           - path: /
             pathType: ImplementationSpecific
   config:
-    keycloak_issuer_url: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080/realms/bank-realm"
-    keycloak_server_url: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080"
+    KEYCLOAK_ISSUER_URL: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080/realms/bank-realm"
+    KEYCLOAK_SERVER_URL: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080"
 
 keycloak:
   replicaCount: 1
