--- a/exchange-service/src/main/resources/application.yml
+++ b/exchange-service/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: ${DDL_AUTO_MODE:create-drop}
     show-sql: true
     properties:
       hibernate:
