--- a/my-microservices-app/charts/exchange-service/templates/configmap.yaml
+++ b/my-microservices-app/charts/exchange-service/templates/configmap.yaml
@@ -5,7 +5,20 @@ metadata:
   labels:
     {{- include "exchange-service.labels" . | nindent 4 }}
 data:
-  # Process all config values with tpl to support Helm templating
+  # Example: Generic key-value pairs from .Values.config
+  # Note: We process database_url separately below using tpl
   {{- range $key, $value := .Values.config }}
-  {{ $key | upper }}: {{ tpl ($value | toString) $ | quote }}
+  {{- if ne $key "database_url" }}
+  {{ $key }}: {{ $value | quote }}
   {{- end }}
+  {{- end }}
+
+  # Example: How Spring Boot might consume DB config (adjust keys as needed)
+  # Ensure these keys match what your application expects.
+  # Note: The values come from .Values.config which are set by the umbrella chart.
+  # Use the 'tpl' function to render the database_url which contains Helm templating itself
+  SPRING_DATASOURCE_URL: {{ tpl .Values.config.database_url . | quote }}
+  SPRING_DATASOURCE_USERNAME: {{ .Values.config.database_username | quote }}
+  # SPRING_DATASOURCE_PASSWORD would typically come from a secret, not this ConfigMap.
+  DDL_AUTO_MODE: {{ .Values.config.DDL_AUTO_MODE | quote }}
+  # Example: Include other config defined in values.yaml
