#rename apigw module

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>exchange-service</module>
         <module>exchange-generator-service</module>
         <module>front-ui-service</module>
-        <module>apigw</module>
+        <module>apigw-service</module>
         <module>clients</module>
     </modules>
 
