#update Dockerfile for each service.

--- a/apigw-service/Dockerfile
+++ b/apigw-service/Dockerfile
@@ -2,6 +2,7 @@ FROM maven:3.9.9-eclipse-temurin-21 AS build
 WORKDIR /app
 
 COPY pom.xml .
+COPY apigw-service/pom.xml apigw-service/pom.xml
 COPY front-ui-service/pom.xml front-ui-service/pom.xml
 COPY exchange-generator-service/pom.xml exchange-generator-service/pom.xml
 COPY notification-service/pom.xml notification-service/pom.xml
@@ -9,21 +10,20 @@ COPY fraud-service/pom.xml fraud-service/pom.xml
 COPY customer-service/pom.xml customer-service/pom.xml
 COPY order-service/pom.xml order-service/pom.xml
 COPY exchange-service/pom.xml exchange-service/pom.xml
-COPY apigw-service/pom.xml apigw-service/pom.xml
 COPY clients/pom.xml clients/pom.xml
 
-RUN mvn -B -pl front-ui-service -am dependency:go-offline
+RUN mvn -B -pl apigw-service -am dependency:go-offline
 
 COPY . .
 
-RUN mvn -B -pl front-ui-service -am package -DskipTests
+RUN mvn -B -pl apigw-service -am package -DskipTests
 
 FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 
-COPY --from=build /app/front-ui-service/target/front-ui-service-*.jar app.jar
+COPY --from=build /app/apigw-service/target/apigw-service-*.jar app.jar
 
-EXPOSE 8085
+EXPOSE 8080
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
