--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,6 +27,7 @@ pipeline {
                 docker build -t exchange-service:${IMAGE_TAG} -f exchange-service/Dockerfile .
                 docker build -t exchange-generator-service:${IMAGE_TAG} -f exchange-generator-service/Dockerfile .
                 docker build -t front-ui-service:${IMAGE_TAG} -f front-ui-service/Dockerfile .
+                docker build -t apigw-service:${IMAGE_TAG} -f apigw-service/Dockerfile .
                 """
             }
         }
@@ -294,6 +295,15 @@ pipeline {
                   --set image.tag=${IMAGE_TAG} \\
                   --set ingress.enabled=true \\
                   --set ingress.hosts[0].host=front-ui.prod.local \\
+                  --set ingress.hosts[0].paths[0].path="/" \\
+                  --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
+
+                helm upgrade --install apigw-service my-microservices-app/charts/apigw-service \\
+                  --namespace prod --create-namespace \\
+                  --set image.repository=apigw-service \\
+                  --set image.tag=${IMAGE_TAG} \\
+                  --set ingress.enabled=true \\
+                  --set ingress.hosts[0].host=apigw.prod.local \\
                   --set ingress.hosts[0].paths[0].path="/" \\
                   --set ingress.hosts[0].paths[0].pathType="ImplementationSpecific"
                 """
