--- a/my-microservices-app/charts/keycloak/values.yaml
+++ b/my-microservices-app/charts/keycloak/values.yaml
@@ -67,6 +67,12 @@ env:
   adminUser: admin
   adminPassword: admin
 
+config:
+  KC_HOSTNAME: keycloak.prod.local
+  KC_HOSTNAME_STRICT: "false"
+  KC_HTTP_ENABLED: "true"
+  KC_PROXY: edge
+
 # Configuration for realm import
 realmImport:
   enabled: true
