#extend keycloak helm configuration

--- a/my-microservices-app/charts/keycloak/templates/deployment.yaml
+++ b/my-microservices-app/charts/keycloak/templates/deployment.yaml
@@ -48,6 +48,14 @@ spec:
               value: {{ .Values.env.adminUser }}
             - name: KC_BOOTSTRAP_ADMIN_PASSWORD
               value: {{ .Values.env.adminPassword }}
+            - name: KC_HOSTNAME
+              value: {{ .Values.env.hostname | quote }}
+            - name: KC_HOSTNAME_STRICT
+              value: {{ .Values.env.hostnameStrict | quote }}
+            - name: KC_PROXY
+              value: {{ .Values.env.proxy | quote }}
+            - name: KC_HTTP_ENABLED
+              value: {{ .Values.env.httpEnabled | quote }}
           volumeMounts:
             - name: keycloak-config
               mountPath: /opt/keycloak/data/import
