--- a/my-microservices-app/values.yaml
+++ b/my-microservices-app/values.yaml
@@ -165,6 +165,10 @@ keycloak:
   env:
     adminUser: admin
     adminPassword: admin
+    hostname: keycloak.prod.local
+    hostnameStrict: false
+    proxy: edge
+    httpEnabled: true
 
 # Configuration for the order-service subchart
 # NOTE: Build image locally: `docker build -t order-service:latest in order-service dir
