#deploy keycloak first (and wait a bit)

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -243,6 +243,8 @@ pipeline {
                 sh """
                 kubectl wait --for=condition=ready pod -l app.kubernetes.io/name=keycloak \
                   -n prod --timeout=300s
+
+                sh 'sleep 90'
                 """
             }
         }
