--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - ${KUBECONFIG_PATH}:/Users/viktar-b/.kube/config
+      - ${KUBECONFIG_PATH}:/root/.kube/config
 
 volumes:
   jenkins_home:
