--- a/my-microservices-app/values.yaml
+++ b/my-microservices-app/values.yaml
@@ -124,6 +124,24 @@ exchange-generator-service:
           - path: /
             pathType: ImplementationSpecific
 
+transfer-service:
+  replicaCount: 1
+  image:
+    repository: transfer-service
+    tag: "latest"
+    pullPolicy: IfNotPresent
+  service:
+    type: ClusterIP
+    port: 8089
+  ingress:
+    enabled: true
+    className: "nginx"
+    hosts:
+      - host: transfer.myapp.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+
 front-ui-service:
   replicaCount: 1
   image:
