--- a/my-microservices-app/charts/transfer-service/values.yaml
+++ b/my-microservices-app/charts/transfer-service/values.yaml
@@ -75,3 +75,6 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+config:
+  KEYCLOAK_ISSUER_URL: "http://keycloak.{{ .Release.Namespace }}.svc.cluster.local:8080/realms/bank-realm"
