#add CASH service

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>notification-service</module>
         <module>exchange-service</module>
         <module>exchange-generator-service</module>
+        <module>cash-service</module>
         <module>transfer-service</module>
         <module>front-ui-service</module>
         <module>apigw-service</module>
